--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ nav li{
   width : 180px;
   height : 45px;
   text-align  :center;
-  line-height : 35px;
+  line-height : 30px;
   font-family: sans-serif;
   list-style: none;
+  font-size: 14px;
  
 }
 
@@ -25,16 +26,13 @@ body {
   background-image: url("images/Fond-écranPremière_page.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  margin: 0;
+  margin-top: 90;
   padding: 0;
   font-family: sans-serif;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
 }
 
 header {
@@ -115,6 +113,7 @@ p17 {
 h7 {
   color: orangered;
   font-size: 65px;
+  text-align: center;
 
 }
 
@@ -128,6 +127,16 @@ p55 {
   color:white;
   font-size: 25px;
   text-align: center;
+}
+
+h8 {
+  color:blue;
+  font-size: 65px;
+}
+
+h9 {
+  color:#3388BB;
+  font-size: 65px;
 }
 
 
