Mes Projets Scolaires

--- a/style.css
+++ b/style.css
@@ -139,7 +139,11 @@ h9 {
   font-size: 65px;
 }
 
-
+h44 {
+  color:blue;
+  text-align: center;
+  font-size: 45px;
+}
 
 .container {
   max-width: 1200px;
@@ -689,3 +693,5 @@ headers p {
   font-size: 1.5em;
   }
 }
+
+
