--- a/style.css
+++ b/style.css
@@ -145,6 +145,11 @@ h44 {
   font-size: 45px;
 }
 
+p107{
+  color: white;
+  font-size: 20px;
+}
+
 .container {
   max-width: 1200px;
   margin: 20px auto;
